--- a/rtl/msxdos/Makefile.fpc
+++ b/rtl/msxdos/Makefile.fpc
@@ -6,8 +6,8 @@ main=rtl
 [target]
 #loaders=prt0s prt0t prt0m prt0c prt0l prt0h # exceptn fpu
 units=system si_prc $(UUCHARUNIT) $(OBJPASUNIT) $(ISO7185UNIT) strings charset cpall \
-      getopts exeinfo heaptrc
-#$(UUCHARUNIT) $(OBJPASUNIT) strings dos heaptrc lnfodwrf sysconst sysutils \
+      getopts exeinfo $(HEAPTRCUNIT)
+#$(UUCHARUNIT) $(OBJPASUNIT) strings dos $(HEAPTRCUNIT) lnfodwrf sysconst sysutils \
 #      math $(MACPASUNIT) $(ISO7185UNIT) $(EXTPASUNIT) rtlconsts typinfo cpu types \
 #      getopts sortbase fgl classes \
 #      msmouse ports  \
