--- a/rtl/nativent/Makefile.fpc
+++ b/rtl/nativent/Makefile.fpc
@@ -11,7 +11,7 @@ loaders=
 units=system $(UUCHARUNIT) $(OBJPASUNIT) $(ISO7185UNIT) $(EXTPASUNIT) cpall buildrtl
 implicitunits=ndk ndkutils ddk \
       ctypes strings \
-#      heaptrc
+#      $(HEAPTRCUNIT)
 #      initc cmem dynlibs signals \
       dos \
       rtlconsts sysconst sysutils math types \
