--- a/rtl/netwlibc/Makefile.fpc
+++ b/rtl/netwlibc/Makefile.fpc
@@ -8,7 +8,7 @@ main=rtl
 [target]
 loaders=nwplibc nwl_main nwl_dlle
 units=$(SYSTEMUNIT) $(UUCHARUNIT) $(OBJPASUNIT) $(MACPASUNIT) $(ISO7185UNIT) $(EXTPASUNIT) strings \
-      lineinfo lnfodwrf  heaptrc \
+      lineinfo lnfodwrf  $(HEAPTRCUNIT) \
       nwsnut libc dos sysconst \
       initc sysutils types typinfo sortbase fgl classes \
       cpu mmx getopts \
