--- a/rtl/nativent/Makefile.fpc
+++ b/rtl/nativent/Makefile.fpc
@@ -17,7 +17,7 @@ implicitunits=ndk ndkutils ddk \
       rtlconsts sysconst sysutils math types \
       typinfo fgl classes \
       $(CPU_UNITS) charset getopts \
-      softfpu sfpux80 ufloatx80 sfpu128 ufloat128 \
+      $(SOFTFPUUNIT) $(SFPUX80UNIT) $(UFLOATX80UNIT) $(SFPU128UNIT) $(UFLOAT128UNIT) \
 #      sockets printer \
 #      keyboard
 #      sharemem exeinfo $(FPINTRESUNIT) \
