--- a/rtl/amiga/Makefile.fpc
+++ b/rtl/amiga/Makefile.fpc
@@ -66,7 +66,7 @@ ifeq ($(ARCH),powerpc)
 override LOADERS=
 RESUNIT=$(FPINTRESUNIT)
 SYSINITUNITS=si_prc
-EXEUNITS=lineinfo exeinfo
+EXEUNITS=$(LINEINFOUNIT) exeinfo
 endif
 
 [rules]
