--- a/rtl/aros/Makefile.fpc
+++ b/rtl/aros/Makefile.fpc
@@ -60,7 +60,7 @@ endif
 OBJPASDIR=$(RTL)/objpas
 
 ifeq ($(ARCH),i386)
-CPU_UNITS=cpu mmx lineinfo
+CPU_UNITS=cpu mmx $(LINEINFOUNIT)
 endif
 
 ifeq ($(ARCH),x86_64)
