--- a/rtl/palmos/Makefile.fpc
+++ b/rtl/palmos/Makefile.fpc
@@ -13,7 +13,7 @@ units=$(SYSTEMUNIT) si_prc $(UUCHARUNIT) objpas $(ISO7185UNIT) strings \
        sysconst \
        systraps pilot
 #units=$(SYSTEMUNIT) $(UUCHARUNIT) ctypes objpas $(MACPASUNIT) $(ISO7185UNIT) $(EXTPASUNIT) strings \
-#      lnfodwrf lineinfo $(HEAPTRCUNIT) \
+#      lnfodwrf $(LINEINFOUNIT) $(HEAPTRCUNIT) \
 #      windows messages dynlibs \
 #      dos objects \
 #      rtlconsts sysconst sysutils \
