--- a/rtl/win16/Makefile.fpc
+++ b/rtl/win16/Makefile.fpc
@@ -5,7 +5,7 @@
 main=rtl
 [target]
 loaders=prt0s prt0m prt0c prt0l prt0h 
-units=system $(UUCHARUNIT) $(OBJPASUNIT) strings $(ISO7185UNIT) $(EXTPASUNIT) dos \
+units=system $(UUCHARUNIT) $(OBJPASUNIT) $(STRINGSUNIT) $(ISO7185UNIT) $(EXTPASUNIT) dos \
       wintypes winprocs win31 ports dynlibs sortbase \
       sysconst rtlconsts sysutils math types typinfo fgl \
       classes charset cpu getopts cpall \
@@ -84,13 +84,6 @@ system$(PPUEXT) : system.pp $(SYSDEPS) wintypes.inc winprocsh.inc winprocs.inc \
                   glbheap.inc glbheaph.inc locheap.inc locheaph.inc \
                   sysdl.inc sysdlh.inc
         $(COMPILER) $(FPC_SYSTEM_OPT) -Us -Sg system.pp
-	$(EXECPPAS)
-
-strings$(PPUEXT) : $(INC)/strings.pp $(INC)/stringsi.inc \
-                   $(PROCINC)/strings.inc $(PROCINC)/stringss.inc \
-                   $(INC)/genstr.inc $(INC)/genstrs.inc \
-                   system$(PPUEXT)
-	$(COMPILER) $(INC)/strings.pp
 	$(EXECPPAS)
 
 #
