--- a/rtl/msxdos/Makefile.fpc
+++ b/rtl/msxdos/Makefile.fpc
@@ -13,7 +13,7 @@ units=system si_prc $(UUCHARUNIT) $(OBJPASUNIT) $(ISO7185UNIT) $(STRINGSUNIT) ch
 #      msmouse ports  \
 #      charset cpall ctypes \
 #      fpwidestring character unicodedata
-#      cmem
+#     $(CMEMUNIT)
 #      initc profile dxetype dxeload emu387 \
 #      cpu mmx \
 #      vesamode \
